grammar.js
    source_file: $ => seq(
      // Treat '#!' as a line comment for now to preserve existing highlighting rules
      optional(alias($.hashbang_line, $.line_comment)),
      repeat($._top_level_item),
    ),

    // Literals
    // -------------------------
    integer_literal: _ => token(seq(
      choice(
        INT,
        seq(/0[xX]/, HINT),
        seq(/0[oO]/, OINT),
        seq(/0[bB]/, BINT),
      ),
      optional(INTTYPE),
    )),

    escape_sequence: _ => token(prec(1, seq(
      '\\',
      choice(
        /[0abefnrtv'"\\]/,
        /x[0-9a-fA-F]{2}/,
        /u[0-9a-fA-F]{4}/,
        /U[0-9a-fA-F]{8}/,
      ),
    ))),

    string_literal: $ => seq(
      '"',
      repeat(choice(
        alias(token.immediate(prec(1, /[^\\"\n]+/)), $.string_content),
        $.escape_sequence,
      )),
      '"',
    ),

    bytes_literal: _ => token(choice(
      seq('x\'', HEX, '\''),
      seq('x"',  HEX, '"'),
      seq('x`',  HEX, '`'),
      seq('b64\'', B64, '\''),
      seq('b64"',  B64, '"'),
      seq('b64`',  B64, '`'),
    )),

    // Comments
    // -------------------------
    ident: _ => IDENT,
    ct_ident: _ => token(seq('$', IDENT)),
    at_ident: _ => token(seq('@', IDENT)),
    type_ident: _ => TYPE_IDENT,
    ct_type_ident: _ => token(seq('$', TYPE_IDENT)),
    at_type_ident: _ => token(seq('@', TYPE_IDENT)),
    // Constants
    const_ident: _ => CONST_IDENT,
    _decl_ident: $ => choice(
      $.ident,
      $.ct_ident
    ),

    _arg_ident: $ => choice(
      $.ident,
      $.ct_ident,
      $.ct_type_ident,
      $.hash_ident
    ),

    _func_macro_ident: $ => choice(
      $.ident,
      $.at_ident
    ),

    _expr_ident: $ => choice(
      $.const_ident,
      $.ident,
      $.at_ident,
    ),

    _local_expr_ident: $ => choice(
      $.ct_ident,
      $.hash_ident,
    ),

    // Module Paths
    // -------------------------
    module_resolution: $ => prec.left(seq(
      $.ident,
      '::',
    )),
    _module_path: $ => repeat1($.module_resolution),
    path_ident: $ => seq(optional($._module_path), $.ident),
    path_type_ident: $ => seq(optional($._module_path), $.type_ident),
    path_at_type_ident: $ => seq(optional($._module_path), $.at_type_ident),


    // Generic Parameters
    // -------------------------
    _generic_param: $ => choice($.const_ident, $.type_ident),
    generic_param_list: $ => seq('<', commaSep1($._generic_param), '>'),

    _generic_args: $ => commaSep1($.expression),
    generic_arg_list: $ => seq('{', optional($._generic_args), '}'),

    // Helpers
    // -------------------------
    _assign_right_expr: $ => seq('=', field('right', $.expression)),

    _parameter: $ => choice(
      // Typed parameters
      seq(
        field('type', $.type),
        optional(choice(
          '...',
          seq(optional('...'), field('name', choice($.ident, $.ct_ident)), optional($.attributes)),
          // Macro expression parameters
          seq(field('name', $.hash_ident), optional($.attributes)),
        )),
      ),

      // Untyped parameters
      '...',
      seq(field('name', $.ident), optional('...'), optional($.attributes)),
      seq('&', field('name', $.ident), optional($.attributes)), // Method ref parameter such as &self
      // Macro parameters
      seq(
        field('name', choice($.ct_ident, $.hash_ident)),
        optional($.attributes)
      ),
    ),

    param_default: $ => seq('=', field('right', choice('...', $.expression))),
    param: $ => seq($._parameter, optional($.param_default)),
    _parameters: $ => commaSepTrailing1($.param),

    // Attributes
    // -------------------------
    _attribute_name: $ => choice(
      $.at_ident,
      $.path_at_type_ident,
    ),

    attribute_arg: $ => choice($.overload_operator, $.expression),
    attribute_arg_list: $ => seq('(', commaSep1($.attribute_arg), ')'),
    attribute: $ => seq(
      field('name', $._attribute_name),
      optional($.attribute_arg_list),
    ),
    attributes: $ => prec.right(repeat1($.attribute)),

    ////////////////////////////
    // Top Level
    // -------------------------
    _top_level_item: $ => choice(
      $.module_declaration,
      $.import_declaration,
      $.global_declaration,
      $.func_definition,

      $.ct_assert_stmt,
      $.ct_error_stmt,
      $.ct_echo_stmt,
      $.ct_include_stmt,
      $.ct_expand_stmt,
      $.ct_exec_stmt,

      $.struct_declaration,
      $.enum_declaration,
      $.macro_declaration,
      $.bitstruct_declaration,
      $.alias_declaration,
      $.faultdef_declaration,
      $.typedef_declaration,
      $.attrdef_declaration,
      $.interface_declaration,
      $.constdef_declaration,
    ),

    // Module
    // -------------------------
    module_declaration: $ => seq(
      optional($.doc_comment),
      'module',
      field('path', $.path_ident),
      optional($.generic_param_list),
      optional($.attributes),
      ';'
    ),

    // Import
    // -------------------------
    import_path: $ => seq(
      $.path_ident,
      optional($.attributes),
    ),

    import_declaration: $ => seq(
      optional($.doc_comment),
      'import',
      commaSep1($.import_path),
      ';'
    ),

    // Alias
    // -------------------------
    func_signature: $ => seq(
      'fn',
      field('return_type', $.type),
      $.func_param_list,
      optional($.attributes),
    ),

    alias_declaration: $ => seq(
      optional($.doc_comment),
      'alias',
      choice(
        // Variable/function/macro/method/module
        seq(
          field('name', $._func_macro_ident),
          optional($.generic_param_list),
          optional($.attributes),
          choice(
            seq('=', 'module', $.path_ident),
            $._assign_right_expr,
          )
        ),
        // Constant
        seq(
          field('name', $.const_ident),
          optional($.generic_param_list),
          optional($.attributes),
          $._assign_right_expr,
        ),
        // Type/function
        seq(
          field('name', $.type_ident),
          optional($.generic_param_list),
          optional($.attributes),
          '=',
          choice($.expression, $.func_signature)
        ),
      ),
      ';'
    ),

    // Faultdef
    // -------------------------
    faultdef_declaration: $ => seq(
      optional($.doc_comment),
      choice(
        seq(
          // Experimental faultset, faultconst, excuse for 0.8.3
          choice('faultdef', 'faultset', 'faultconst', 'excuse'),
          commaSepTrailing1(seq($.const_ident, optional($.attributes))),
          ';'
        ),
        // Experimental syntax for 0.8.4
        seq(
          choice('faultset', 'faultconst', 'excuse'),
          '{',
          commaSepTrailing1(
            seq(
              optional($.doc_comment),
              $.const_ident,
              optional($.attributes)
            ),
          ),
          '}',
        ),
      ),
    ),

    // Typedef
    // -------------------------
    typedef_declaration: $ => seq(
      optional($.doc_comment),
      // Experimental disinct for 0.8.3
      choice('typedef', 'distinct'),
      field('name', $.type_ident),
      optional($.interface_impl_list),
      optional($.generic_param_list),
      optional($.attributes),
      '=',
      optional('inline'),
      $.type,
      optional($.attribute), // @align
      ';'
    ),

    // Attrdef
    // -------------------------
    _struct_or_union: _ => choice('struct', 'union'),

    identifier_list: $ => commaSep1($._decl_ident),

    struct_member_declaration: $ => choice(
      seq(optional($.doc_comment), field('type', $.type), $.identifier_list, optional($.attributes), ';'),
      seq(optional($.doc_comment), $._struct_or_union, optional($.ident), optional($.attributes), field('body', $.struct_body)),
      seq(
        optional($.doc_comment),
        'bitstruct',
        optional($.ident),
        ':',
        alias($._type_no_generics, $.type),
        optional($.attributes),
        field('body', $.bitstruct_body)
      ),
      seq(optional($.doc_comment), 'inline', field('type', $.type), optional($.ident), optional($.attributes), ';'),
    ),
    struct_body: $ => seq(
      '{',
      // NOTE Allowing empty struct to not be too strict.
      repeat($.struct_member_declaration),
      '}',
    ),
    struct_declaration: $ => seq(
      optional($.doc_comment),
      $._struct_or_union,
      field('name', $.type_ident),
      optional($.interface_impl_list),
      optional($.generic_param_list),
      optional($.attributes),
      field('body', $.struct_body),
    ),

    // Bitstruct
    // -------------------------
    bitstruct_member_declaration: $ => seq(
      optional($.doc_comment),
      field('type', $._base_type),
      $.ident,
      optional(seq(
        ':',
        $.expression,
        optional(seq(
          '..',
          $.expression,
        ))
      )),
      optional($.attributes),
      ';'
    ),
    bitstruct_body: $ => seq(
      '{',
      repeat($.bitstruct_member_declaration),
      '}',
    ),
    bitstruct_declaration: $ => seq(
      optional($.doc_comment),
      'bitstruct',
      field('name', $.type_ident),
      optional($.interface_impl_list),
      ':',
      alias($._type_no_generics, $.type),
      optional($.generic_param_list),
      optional($.attributes),
      field('body', $.bitstruct_body),
    ),

    // Enum/Constdef
    // -------------------------
    enum_constant: $ => seq(
      optional($.doc_comment),
      field('name', $.const_ident),
      optional($.attributes),
      optional(choice(
        field('args', $.initializer_list), // Only for enum
        $._assign_right_expr, // Only for constdef
      )),
    ),
    enum_param: $ => seq(
      optional('inline'),
      field('type', $.type),
      field('name', $.ident),
    ),
    enum_param_list: $ => seq('(', commaSepTrailing($.enum_param), ')'),
    enum_spec: $ => prec.right(seq(
      ':',
      seq(
        optional('inline'), // Only for constdef
        optional(field('type', alias($._type_no_generics, $.type))),
        optional($.enum_param_list), // Only for enum
      ),
    )),
    enum_body: $ => seq(
      '{',
      commaSepTrailing($.enum_constant),
      '}'
    ),
    enum_declaration: $ => seq(
      optional($.doc_comment),
      'enum',
      field('name', $.type_ident),
      optional($.interface_impl_list),
      optional($.enum_spec),
      optional($.generic_param_list),
      optional($.attributes),
      field('body', $.enum_body),
    ),
    constdef_declaration: $ => seq(
      optional($.doc_comment),
      // Experimental constset, cenum for 0.8.3
      choice('constdef', 'constset', 'cenum'),
      field('name', $.type_ident),
      optional($.enum_spec),
      optional($.attributes),
      field('body', $.enum_body),
    ),

    // Interface
    // -------------------------
    interface_body: $ => seq(
      '{',
      repeat($.interface_func_declaration),
      '}'
    ),
    interface_declaration: $ => seq(
      optional($.doc_comment),
      'interface',
      field('name', $.type_ident),
      optional($.generic_param_list),
      optional(seq(
        ':',
        commaSep1($.type_ident),
      )),
      field('body', $.interface_body),
    ),

    // Function/Macro
    // -------------------------
    func_header: $ => seq(
      field('return_type', $.type),
      optional(seq(field('method_type', $.type), '.')),
      field('name', $.ident),
    ),

    macro_header: $ => seq(
      optional(field('return_type', $.type)), // Return type is optional for macros
      optional(seq(field('method_type', $.type), '.')),
      field('name', $._func_macro_ident),
    ),

    func_param_list: $ => seq('(', optional($._parameters), ')'),

    func_declaration: $ => seq(
      'fn',
      $.func_header,
      $.func_param_list,
      optional($.generic_param_list),
      optional($.attributes),
      ';',
    ),

    func_definition: $ => prec.right(seq(
      optional($.doc_comment),
      'fn',
      $.func_header,
      $.func_param_list,
      optional($.generic_param_list),
      optional($.attributes),
      field('body', $.macro_func_body),
    )),

    macro_param_list: $ => seq(
      '(',
      optional(
        choice(
          $._parameters,
          seq(
            optional($._parameters),
            ';',
            $.trailing_block_param,
          ),
        ),
      ),
      ')',
    ),

    implies_body: $ => seq('=>', field('body', $.expression)),

    macro_func_body: $ => choice(
      seq('=>', $.call_expr),
      seq($.implies_body, ';'),
      $.compound_stmt
    ),

    macro_declaration: $ => seq(
      optional($.doc_comment),
      'macro',
      $.macro_header,
      $.macro_param_list,
      optional($.generic_param_list),
      optional($.attributes),
      field('body', $.macro_func_body),
    ),

    // Lambda
    // -------------------------
    _statement: $ => choice(
      $.compound_stmt,
      $.expr_stmt,
      $.declaration_stmt,
      $.var_stmt,
      $.return_stmt,
      $.continue_stmt,
      $.break_stmt,
      $.switch_stmt,
      $.nextcase_stmt,
      $.if_stmt,
      $.for_stmt,
      $.foreach_stmt,
      $.while_stmt,
      $.do_stmt,
      $.defer_stmt,
      $.assert_stmt,
      $.asm_block_stmt,

      $.ct_assert_stmt,
      $.ct_error_stmt,
      $.ct_echo_stmt,
      $.ct_expand_stmt,
      $.ct_if_stmt,
      $.ct_switch_stmt,
      $.ct_foreach_stmt,
      $.ct_for_stmt,
      ';',
    ),

    // Labels
    // -------------------------
    compound_stmt: $ => prec(1, seq('{', repeat($._statement), '}')),

    // Expr Statement
    // -------------------------
    expr_stmt: $ => seq($.expression, ';'),

    // Declaration Statement
    // -------------------------
    declaration_stmt: $ => seq($._declaration, ';'),

    // Var Statement
    // -------------------------
    return_stmt: $ => seq('return', optional($.expression), ';'),

    // Continue Statement
    // -------------------------
    _decl_after_type: $ => seq(
      $._decl_ident_or_identifier_list,
      optional($.generic_param_list),
      optional($.attributes),
      optional($._assign_right_expr),
    ),

    _decl_storage: $ => choice('static', 'tlocal'),
    declaration: $ => seq(
      optional($._decl_storage),
      field('type', $.type),
      $._decl_after_type,
    ),

    const_declaration: $ => seq(
      'const',
      field('type', optional($.type)),
      field('name', $.const_ident),
      optional($.generic_param_list),
      optional($.attributes),
      optional($._assign_right_expr),
    ),

    _declaration: $ => choice(
      $.declaration,
      $.const_declaration,
    ),

    global_declaration: $ => seq(
      optional($.doc_comment),
      optional('extern'),
      choice(
        seq($._declaration, ';'),
        $.func_declaration,
      ),
    ),

    // Case Statement
    // -------------------------
    ident_expr: $ => choice(
      seq(optional($._module_path), $._expr_ident),
      $._local_expr_ident,
    ),

    bytes_expr: $ => repeat1($.bytes_literal),
    paren_expr: $ => seq('(', $.expression, ')'),

    // Precedence over type_paren_expr
    initializer_element: $ => choice(
      seq($.param_path, $._assign_right_expr),
      $.param_path, // Bitstruct bool shorthand
      $.expression,
      // Splatting
      seq('...', $.expression),
    ),

    initializer_list: $ => seq('{', commaSepTrailing($.initializer_element), '}'),

    // Assignment Expression
    // -------------------------
    call_arg: $ => choice(
      $.expression,
      // Splatting
      seq('...', $.expression),
      // Named arguments
      seq(field('name', choice($._arg_ident, $.access_eval)), ':', optional('...'), $.expression),
    ),

    call_arg_list: $ => seq('(', optional($._call_args), ')'),

    // Right precedence for `@require foo() @pure` doc contract
